--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GREEK HISTORY</title>
+    <link rel="icon" href="assets/img/logo-black.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +218,7 @@
     </section>
     <div class="border-footer"></div>
     <!--Footer-->
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="footer-container">
             <div class="logo-container">
                 <img src="assets/img/logo.png" alt="logo">
